--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,24 @@
 .App {
   text-align: center;
 }
-.fondo{
+.fondo {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 432px ;
-  height:750px ;
+  width: 432px;
+  height: 750px;
   display: block;
-
- }
- .fondo2{
+}
+.fondo2 {
   position: absolute;
   top: 0;
   right: 0;
-  width: 432px ;
-  height:760px ;
+  width: 432px;
+  height: 760px;
   display: block;
+}
 
- }
+.content-container {
+  display: flex;
+  justify-content: center;
+}
