--- a/src/App/ui/Components/Header/HeaderComponent.scss
+++ b/src/App/ui/Components/Header/HeaderComponent.scss
@@ -5,14 +5,14 @@
   justify-content: space-between;
   color: #03050f;
   height: 64px;
-  max-width: 1150px;
+  width: auto;
   margin: 0 100px;
 
   &__logo {
     width: 73px;
     height: 36px;
     padding-top: 0.75rem;
-    padding-left: 20px 
+    padding-left: 20px;
   }
 
   &__text {
@@ -20,6 +20,7 @@
     align-items: center;
     margin-left: 10px;
     font-size: 16px;
+
 
     &__info {
       margin-right: 10px;
@@ -39,7 +40,7 @@
         width: 20px;
       }
     }
-    &__number{
+    &__number {
       font-size: 18px;
       font-weight: 700;
       line-height: 20px;
