--- a/src/App/ui/Components/Footer/FooterComponent.scss
+++ b/src/App/ui/Components/Footer/FooterComponent.scss
@@ -6,6 +6,9 @@
     color: #fff;
     width:  100%;
     height: 106px;
+    position: absolute;
+  bottom: -13.5rem;
+  left: 0;
   }
   
   .footer__logo {
