--- a/src/App/ui/Components/Card/CardComponent.scss
+++ b/src/App/ui/Components/Card/CardComponent.scss
@@ -3,7 +3,7 @@
 
   .box {
     margin-top: 48px;
-    padding: 24px 32px 24px 32px;
+    padding: 24px 32px;
     border-radius: 24px;
     gap: 16px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.1);
@@ -53,10 +53,13 @@
   padding: 0 32px;
   max-width: 928px;
 
-  .resume{
+  .resume {
     margin-top: 60px;
-    .back__resumen{
-      display: inline-flex
+    .center {
+      margin: 0;
+    }
+    .back__resumen {
+      display: inline-flex;
     }
   }
 
@@ -72,16 +75,15 @@
   &.container,
   &.containerR {
     &__1 {
-      &.mt-trans{
+      &.mt-trans {
         background-color: transparent;
-        color: #7981B2;
+        color: #7981b2;
       }
-       
     }
     &__2 {
-      &.mt-blue{
+      &.mt-blue {
         background-color: #4f4fff;
-      color: #fff;
+        color: #fff;
       }
     }
   }
@@ -91,14 +93,13 @@
     font-weight: 700;
     line-height: 24px;
     letter-spacing: 0.2px;
-    &.mt-gray{
-      color: #7981B2;
+    &.mt-gray {
+      color: #7981b2;
     }
-   
   }
   &.resumen {
-    font-size: 16px; 
-    margin: 0; 
+    font-size: 16px;
+    margin: 0;
     &.mt-black {
       line-height: 24px;
       color: #141938;
@@ -106,4 +107,26 @@
       letter-spacing: 0.2px;
     }
   }
+}
+@media (max-width: 768px) {
+  .content {
+    .resume {
+      margin-top: 15px;
+      .back_p{
+        display: none;
+      }
+    }
+    .h2-tittle {
+      margin: 0;
+      text-align: center;
+      font-size: 32px;
+    }
+  }
+  .back_m-line {
+    &.mt-b {
+      background: #4f4fff;
+      width: 100%;
+    }
+  }
+ 
 }
