--- a/src/App/ui/Components/Form/FormComponent.scss
+++ b/src/App/ui/Components/Form/FormComponent.scss
@@ -30,9 +30,9 @@
       input[type="text"] {
         width: 200px;
         height: 34px;
-        padding-top: 20px; 
+        padding-top: 20px;
         padding-left: 8px;
-        border: 1px solid #5e6488; 
+        border: 1px solid #5e6488;
         border-top-right-radius: 8px;
         border-bottom-right-radius: 8px;
         position: absolute;
@@ -40,21 +40,22 @@
 
       label {
         position: absolute;
-        top: 0; 
-        left: 0; 
-        font-size: 12px; 
-        color: #999; 
-        pointer-events: none; 
-        transition: all 0.2s; 
+        top: 0;
+        left: 0;
+        font-size: 12px;
+        color: #999;
+        pointer-events: none;
+        transition: all 0.2s;
         padding: 5px;
       }
 
-      input[type="text"]:focus + label, 
-    input[type="text"]:not(:placeholder-shown) + label {        
-        top: 0px; 
+      input[type="text"]:focus + label,
+      input[type="text"]:not(:placeholder-shown) + label {
+        top: 0px;
+        margin-left: 1vw;
         left: 5px;
-        font-size: 10px; 
-        color: #000; 
+        font-size: 12px;
+        color: #000;
       }
     }
     &.text3 {
@@ -71,23 +72,23 @@
       }
 
       label {
-         top: 0; 
-        left: 0; 
-        font-size: 12px; 
-        color: #999; 
-        pointer-events: none; 
-        transition: all 0.2s; 
+        top: 0;
+        left: 0;
+        font-size: 12px;
+        color: #999;
+        pointer-events: none;
+        transition: all 0.2s;
         padding: 5px;
       }
 
-      input[type="text"]:focus + label, 
-    input[type="text"]:not(:placeholder-shown) + label {
+      input[type="text"]:focus + label,
+      input[type="text"]:not(:placeholder-shown) + label {
         position: absolute;
-        top: 0px; 
+        top: 0px;
         left: 5px;
         border-radius: 10px;
-        font-size: 10px; 
-        color: #000; 
+        font-size: 12px;
+        color: #000;
       }
     }
   }
@@ -104,7 +105,6 @@
       background: linear-gradient(86.01deg, #00f4e2 0%, #00ff7f 100%);
       border-radius: 4px;
       padding: 4px 8px;
-     
       font-size: 16px;
       font-weight: 700;
       letter-spacing: 0.4px;
@@ -152,7 +152,9 @@
   margin-top: 15px;
 
   &.checkbox1 {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
     align-items: flex-start;
     height: 20px;
 
@@ -164,14 +166,16 @@
     label {
       justify-content: center;
       font-size: 12px;
-      font-weight: 400;
+      font-weight: 600;
       line-height: 20px;
       letter-spacing: 0.1px;
       text-align: left;
     }
   }
   &.checkbox2 {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
     align-items: flex-start;
     height: 20px;
 
@@ -182,7 +186,7 @@
     label {
       justify-content: flex-start;
       font-size: 12px;
-      font-weight: 400;
+      font-weight: 600;
       line-height: 20px;
       letter-spacing: 0.1px;
       text-align: left;
@@ -217,20 +221,48 @@
 
 .checkbox1 input[type="checkbox"]::before,
 .checkbox2 input[type="checkbox"]::before {
-  content: ""; 
+  content: "";
   display: inline-block;
-  width: 20px; 
-  height: 20px; 
-  border: 1px solid black; 
-  background-color: white; 
+  width: 18px;
+  height: 18px;
+  border: 1px solid black;
+  background-color: white;
   text-align: center;
   border-radius: 5px;
 }
 
 .checkbox1 input[type="checkbox"]:checked::before,
 .checkbox2 input[type="checkbox"]:checked::before {
-  background-color: black; 
-  content: "\2713"; 
+  background-color: black;
+  content: "\2713";
   font-size: 12px;
   color: white;
+}
+
+@media (max-width: 768px) {
+  .form {
+    padding: 0;
+    &-group {
+      &__tittle {
+        max-width: 235px;
+        margin-top: 1rem;
+        &.principal {
+          font-size: 28px;
+          line-height: 36px;
+        }
+        &.sub {
+          max-width: 188px;
+          font-size: 13px;
+          padding: 2px 8px;
+        }
+      }
+    }
+    &-login {
+      margin-top: 2.5rem;
+    }
+    .button {
+      width: 100%;
+      margin-top: 35px;
+    }
+  }
 }
