--- a/src/App/ui/Components/Image/ImageComponent.scss
+++ b/src/App/ui/Components/Image/ImageComponent.scss
@@ -1,15 +1,26 @@
 .image-container {
-    float: left;
-    padding: 40px 60px 90px 120px ;
-    position: relative;
-    z-index: 10;
+  float: left;
+  padding: 40px 60px 90px 120px;
+  position: relative;
+  z-index: 10;
+}
 
+.image {
+  max-width: 100%;
+  width: 480px;
+  height: 560px;
+  border-radius: 20px;
+}
+@media (max-width: 768px) {
+  .image-container {
+    width: 136px;
+    min-width: 136px;
+    max-height: 160px;
+    padding: 0;
+    margin-left: -8rem;
   }
-  
   .image {
     max-width: 100%;
-    width: 480px;
-    height: 560px;
-    border-radius: 20px;
+    height: auto;
   }
-  
+}
