add: mobile reactive

--- a/src/App/ui/Components/Form/FormComponent.scss
+++ b/src/App/ui/Components/Form/FormComponent.scss
@@ -3,7 +3,7 @@
   height: 480px;
   display: flex;
   flex-direction: column;
-  padding: 40px 60px 90px;
+  padding: 40px 120px 90px 0px;
   z-index: 16;
 
   .error {
