--- a/src/App/ui/Components/Menu/MenuComponent.scss
+++ b/src/App/ui/Components/Menu/MenuComponent.scss
@@ -345,4 +345,31 @@
       max-width: 100%;
     }
   }
+  .plans-container {
+    overflow-x: auto;
+    display: flex;
+    gap: 16px;
+    padding: 16px;
+    scroll-snap-type: x mandatory;
+    width: 100%;
+  }
+
+  .plans {
+    display: flex;
+    gap: 16px;
+    padding-top: 2vh;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    margin-bottom: 16px;
+    scroll-snap-type: x mandatory;
+    flex: 0 0 auto;
+  }
+  .plan {
+    flex: 0 0 auto;
+    margin-right: 16px;
+    scroll-snap-align: start;
+    width: 225px;
+    margin-left: 16px;
+    margin-right: 0;
+  }
 }
